// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Form/InputGroup Group Checkbox 1`] = `
Array [
  " ",
  <div
    style={
      Object {
        "--background": "2, 40, 60",
        "--highlight": "255,  202,  16",
        "--opacity-1": 0.1,
        "--opacity-7": 0.7,
        "--primary": "206, 180, 249",
        "--secondary": "189, 231, 255",
        "--tertiary": "176, 239, 165",
        "--text": "245, 245, 245",
        "0.1": "--opacity-1",
        "0.7": "--opacity-7",
      }
    }
  >
     
    <div
      className="group_recurrent"
    >
      <span
        className="input_recurrent"
        onClick={[Function]}
      >
        <svg
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          />
        </svg>
        <input
          checked={true}
          className="checkbox"
          id="recurrent"
          name="recurrent"
          readOnly={true}
          type="checkbox"
        />
      </span>
      <label
        htmlFor="recurrent"
      >
        Recurrent
      </label>
    </div>
     
  </div>,
  " ",
]
`;

exports[`Storyshots Form/InputGroup Group Date 1`] = `
Array [
  " ",
  <div
    style={
      Object {
        "--background": "2, 40, 60",
        "--highlight": "255,  202,  16",
        "--opacity-1": 0.1,
        "--opacity-7": 0.7,
        "--primary": "206, 180, 249",
        "--secondary": "189, 231, 255",
        "--tertiary": "176, 239, 165",
        "--text": "245, 245, 245",
        "0.1": "--opacity-1",
        "0.7": "--opacity-7",
      }
    }
  >
     
    <div
      className="group_date_day"
    >
      <select
        className="input_select"
        defaultValue="friday"
        id="date"
        name="date"
        onChange={[Function]}
      >
        <option
          value="friday"
        >
          Friday
        </option>
        <option
          value="saturday"
        >
          Saturday
        </option>
        <option
          value="sunday"
        >
          Sunday
        </option>
        <option
          value="monday"
        >
          Monday
        </option>
        <option
          value="tuesday"
        >
          Tuesday
        </option>
        <option
          value="wednesday"
        >
          Wednesday
        </option>
        <option
          value="thursday"
        >
          Thursday
        </option>
      </select>
      <label
        htmlFor="date"
      >
        Date
      </label>
    </div>
     
  </div>,
  " ",
]
`;

exports[`Storyshots Form/InputGroup Group Hour 1`] = `
Array [
  " ",
  <div
    style={
      Object {
        "--background": "2, 40, 60",
        "--highlight": "255,  202,  16",
        "--opacity-1": 0.1,
        "--opacity-7": 0.7,
        "--primary": "206, 180, 249",
        "--secondary": "189, 231, 255",
        "--tertiary": "176, 239, 165",
        "--text": "245, 245, 245",
        "0.1": "--opacity-1",
        "0.7": "--opacity-7",
      }
    }
  >
     
    <div
      className="group_date_hour"
    >
      <input
        className="input_date_hour"
        defaultValue="12:00"
        id="time"
        min="12:00"
        name="time"
        onChange={[Function]}
        type="time"
      />
      <label
        htmlFor="time"
      >
        Hour
      </label>
    </div>
     
  </div>,
  " ",
]
`;

exports[`Storyshots Form/InputGroup Group Priority 1`] = `
Array [
  " ",
  <div
    style={
      Object {
        "--background": "2, 40, 60",
        "--highlight": "255,  202,  16",
        "--opacity-1": 0.1,
        "--opacity-7": 0.7,
        "--primary": "206, 180, 249",
        "--secondary": "189, 231, 255",
        "--tertiary": "176, 239, 165",
        "--text": "245, 245, 245",
        "0.1": "--opacity-1",
        "0.7": "--opacity-7",
      }
    }
  >
     
    <div
      className="group_priority"
    >
      <select
        className="input_select"
        defaultValue="medium"
        id="priority"
        name="priority"
        onChange={[Function]}
      >
        <option
          value="low"
        >
          Low
        </option>
        <option
          value="medium"
        >
          Medium
        </option>
        <option
          value="high"
        >
          High
        </option>
      </select>
      <label
        htmlFor="priority"
      >
        Priority
      </label>
    </div>
     
  </div>,
  " ",
]
`;
